fixed bug with sticky/overflow: hidden incompatability

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -12,9 +12,12 @@
     }
 }
 
-.page-content {
-    max-width: 100vw;
-    overflow: hidden;
+@include for-tablet-landscape-down() {
+
+    .page-content {
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
 }
 
 .hero-body {
